@@ -3,6 +3,7 @@ Version 1.5.12+svn:
    * updated translations: Chinese (Simplified)
  * Miscellaneous and bug fixes:
    * Fix another savegame cache corruption
+   * Fixed bug #13099: MP lobby player list becomes inaccurate over time
 
 Version 1.5.12:
  * Add-on server:
